name:                cls
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             MIT
license-file:        LICENSE
author:              Patrik Sandahl
maintainer:          kosmoskatten.software@gmail.com
-- copyright:           
category:            System
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable cls
  main-is:             Cls.hs
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.9 && <4.10
                     , aeson
                     , bytestring
                     , containers
                     , hats
                     , text
  hs-source-dirs:      src
  default-language:    Haskell2010